--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 spring.application.name=wallet
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/walletdb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#????????
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/walletdb
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+
+
+
+# ? ??????????
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://postgres:5432/walletdb}
+spring.datasource.username=${DATABASE_USER:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:postgres}
 
 spring.jpa.hibernate.ddl-auto=none
