Добавлен .env для конфигурации без пересборки контейнера

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,19 @@ services:
     container_name: wallet_postgres
     restart: always
     environment:
-      POSTGRES_DB: walletdb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   wallet-app:
     build: .
@@ -21,11 +26,12 @@ services:
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: jdbc:postgresql://postgres:5432/walletdb
-      DATABASE_USER: postgres
-      DATABASE_PASSWORD: postgres
+      DATABASE_URL: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+      DATABASE_USER: ${POSTGRES_USER}
+      DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
+      SERVER_PORT: ${SERVER_PORT}
     ports:
-      - "8080:8080"
+      - "${SERVER_PORT}:8080"
 
 volumes:
   postgres_data:
